--- a/css/menuiniciar.css
+++ b/css/menuiniciar.css
@@ -40,6 +40,7 @@ header {
     padding: 15px;
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
+    justify-items: stretch;
     gap: 20px;
 }
 
@@ -59,6 +60,7 @@ main {
 }
 
 #titleMenu {
+    font-size: 20px;
     background-color: var(--color3);
     color: white;
     padding: 15px;
@@ -116,7 +118,7 @@ main {
     height: 80px;
     width: 80px;
     color: white;
-    font-size: 40px;
+    font-size: 50px;
     border-radius: 50%;
     display: flex;
     justify-content: center;
