--- a/css/menuiniciar.css
+++ b/css/menuiniciar.css
@@ -199,6 +199,19 @@ main {
     display: block;
 }
 
+#userView.resize0 #floatScreenResizer {
+    visibility: hidden;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 #userHandBox {
     display: flex;
     align-items: center;
@@ -243,3 +256,22 @@ main {
     border-radius: 50%;
 }
 
+#userImageBox #videocam2, #mic2{
+    display: none;
+}
+
+#userImageBox #floatScreenResizer2 {
+    visibility: hidden;
+    background-color: var(--color3);
+    color: var(--color0);
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
