--- a/css/menuiniciar.css
+++ b/css/menuiniciar.css
@@ -36,22 +36,22 @@ body {
 
 header {
     height: 80px;
-    padding: 15px;
+    padding: 10px 10px 10px 10px;
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
     justify-items: stretch;
+    align-items: center;
     gap: 20px;
 }
 
 main {
     height: calc(100vh - 80px);
-    overflow: hidden;
 }
 
 #btnBack {
-    font-size: 50px;
-    width: 50px;
-    font-weight: 800;
+    font-size: 60px;
+    width: 60px;
+    font-weight: 600;
     color: var(--color0);
 }
 
@@ -59,7 +59,8 @@ main {
     font-size: 20px;
     background-color: var(--background-color1);
     color: var(--color0);
-    padding: 15px;
+    height: 60px;
+    padding: 10px;
     border-radius: 15px;
     display: flex;
     flex-direction: column;
